# BossyRust

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  bossy  medium_article.md
.claude/agents/: rust-tui-test-enhancer.md  rust-tui-ux-reviewer.md
benches/: performance_benchmarks.rs
config/: presets.toml
coverage/: tarpaulin-report.html
src/: lib.rs  main.rs
src/commands/: cli.rs
src/config/: settings.rs
src/network/: connections.rs  mod.rs  ports.rs  utils.rs
src/process/: info.rs  killer.rs  mod.rs  monitor.rs
src/testing/: fixtures.rs  integration_helpers.rs  mocks.rs  mod.rs  property_tests.rs  tui_test_utils.rs
src/tui/: app.rs  dashboard.rs  events.rs  mod.rs  themes.rs
tests/: cli_integration_tests.rs  tui_dashboard_tests.rs  tui_events_tests.rs
